# DeskSmartFan

Hardware/DeskSmartFan/: DeskSmartFan.kicad_pcb  DeskSmartFan.kicad_prl  DeskSmartFan.kicad_pro  DeskSmartFan.kicad_sch  mg90S_servo_schematic.kicad_sch  nrf52811_default_schematic.kicad_sch  rp2040_default_schematic.kicad_sch  ssd1306_default.kicad_sch  sym-lib-table  tb6612fng.kicad_sch  tps54311_default_schematic.kicad_sch  user_interface.kicad_sch
Hardware/DeskSmartFan/Footprints/: MDBT42Q_RAY.kicad_mod  TB6612FNG_C_8_EL.kicad_mod
Hardware/DeskSmartFan/Gerber/: DeskSmartFan-B_Cu.gbr  DeskSmartFan-B_Mask.gbr  DeskSmartFan-B_Paste.gbr  DeskSmartFan-B_Silkscreen.gbr  DeskSmartFan-Edge_Cuts.gbr  DeskSmartFan-F_Cu.gbr  DeskSmartFan-F_Mask.gbr  DeskSmartFan-F_Paste.gbr  DeskSmartFan-F_Silkscreen.gbr  DeskSmartFan-NPTH-drl_map.gbr  DeskSmartFan-NPTH.drl  DeskSmartFan-PTH-drl_map.gbr  DeskSmartFan-PTH.drl  DeskSmartFan-job.gbrjob
Hardware/DeskSmartFan/Lib/: MDBT42Q_RAY.kicad_sym
Software/DeskSmartFan/: CMakeLists.txt
Software/DeskSmartFan/Application/: CMakeLists.txt
Software/DeskSmartFan/Application/Inc/: main.h
Software/DeskSmartFan/Application/Src/: main.c
Software/DeskSmartFan/ExternalLib/: CMakeLists.txt
Software/DeskSmartFan/ExternalLib/Inc/: fonts.h  ssd1306.h
Software/DeskSmartFan/ExternalLib/Src/: fonts.c  ssd1306.c
